# microcosm-rs

./: Cargo.toml  Makefile  flake.nix  readme.md
.github/workflows/: build.yml  checks.yml
constellation/: Cargo.toml  LICENSE.future  readme.md
constellation/src/server/: filters.rs  mod.rs
constellation/src/storage/: mem_store.rs  mod.rs  rocks_store.rs
constellation/templates/: dids.html.j2  get-backlinks.html.j2  get-many-to-many-counts.html.j2  hello.html.j2  links.html.j2  try-it-macros.html.j2
jetstream/: Cargo.toml
jetstream/src/: error.rs  events.rs  lib.rs
legacy/: cozy-setup (move to another repo).md  old-readme-details.md  original-notes.md  ufos ops (move to micro-ops).md
links/src/: lib.rs
pocket/: .gitignore  Cargo.toml  api-description.md
pocket/src/: lib.rs  main.rs  server.rs  storage.rs  token.rs
pocket/static/: index.html
quasar/: Cargo.toml  readme.md
quasar/src/: storage.rs
reflector/: Cargo.toml  readme.md
reflector/src/: main.rs
slingshot/: Cargo.toml  api-description.md  readme.md
slingshot/src/: consumer.rs  error.rs  firehose_cache.rs  healthcheck.rs  identity.rs  lib.rs  main.rs  record.rs  server.rs
slingshot/static/: index.html
spacedust/: Cargo.toml
spacedust/src/: consumer.rs  delay.rs  error.rs  lib.rs  main.rs  removable_delay_queue.rs  server.rs  subscriber.rs
spacedust/static/: index.html
ufos/: Cargo.toml  readme.md
ufos/fuzz/fuzz_targets/: counts_value.rs
ufos/src/: consumer.rs  db_types.rs  error.rs  file_consumer.rs  index_html.rs  lib.rs  main.rs  qs_query.rs  server.rs  storage.rs  storage_fjall.rs  storage_mem.rs  store_types.rs
ufos/src/server/: collections_query.rs  cors.rs  mod.rs
who-am-i/: .gitignore  Cargo.toml  readme.md
who-am-i/demo/: index.html  serve
who-am-i/src/: dns_resolver.rs  expiring_task_map.rs  identity_resolver.rs  jwt.rs  lib.rs  main.rs  oauth.rs  server.rs
who-am-i/static/: index.html  login.html  style.css
who-am-i/templates/: auth-fail.hbs  authorized.hbs  base-base.hbs  base-framed.hbs  base-full.hbs  hello.hbs  prompt-anon.hbs  prompt-base.hbs  prompt-error.hbs  prompt-known.hbs  prompt.hbs  return-base.hbs
