[package]
name = "pocket"
version = "0.1.0"
edition = "2024"

[dependencies]
atrium-crypto = "0.1.2"
clap = { version = "4.5.41", features = ["derive"] }
jwt-compact = { git = "https://github.com/fatfingers23/jwt-compact.git", features = ["es256k"] }
log = "0.4.27"
poem = { version = "3.1.12", features = ["acme", "static-files"] }
poem-openapi = { version = "5.1.16", features = ["scalar"] }
reqwest = { version = "0.12.22", features = ["json"] }
rusqlite = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.141" }
thiserror = "2.0.16"
tokio = { version = "1.47.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
