[package]
name = "reflector"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
log = "0.4.28"
poem = "3.1.12"
serde = { version = "1.0.219", features = ["derive"] }
tokio = "1.47.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
