[package]
name = "spacedust"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
clap = { version = "4.5.40", features = ["derive"] }
dropshot = "0.16.2"
futures = "0.3.31"
http = "1.3.1"
jetstream = { path = "../jetstream", features = ["metrics"] }
links = { path = "../links" }
metrics = "0.24.2"
schemars = "0.8.22"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_qs = "1.0.0-rc.3"
tinyjson = "2.5.1"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
