[package]
name = "ufos"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }
cardinality-estimator-safe = { version = "4.0.2", features = ["with_serde", "with_digest"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive"] }
dropshot = "0.16.0"
env_logger = "0.11.7"
fjall = { version = "2.8.0", features = ["lz4"] }
getrandom = "0.3.3"
http = "1.3.1"
jetstream = { path = "../jetstream", features = ["metrics"] }
log = "0.4.26"
lsm-tree = "2.6.6"
metrics = "0.24.2"
metrics-exporter-prometheus = { version = "0.17.0", default-features = false, features = ["http-listener"] }
schemars = { version = "0.8.22", features = ["raw_value", "chrono"] }
semver = "1.0.26"
serde = "1.0.219"
serde_json = "1.0.140"
serde_qs = "1.0.0-rc.3"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full", "sync", "time"] }
tokio-util = "0.7.15"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.0"

[dev-dependencies]
tempfile = "3.19.1"
