[package]
name = "who-am-i"
version = "0.1.0"
edition = "2024"

[dependencies]
atrium-api = { version = "0.25.4", default-features = false, features = ["tokio", "agent"] }
atrium-identity = "0.1.5"
atrium-oauth = "0.1.3"
clap = { version = "4.5.40", features = ["derive"] }
dropshot = "0.16.2"
env_logger = "0.11.8"
hickory-resolver = "0.25.2"
http = "1.3.1"
log = "0.4.27"
metrics = "0.24.2"
schemars = "0.8.22"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_qs = "1.0.0-rc.3"
tokio = { version = "1.45.1", features = ["full", "macros"] }
tokio-util = "0.7.15"
