[package]
name = "who-am-i"
version = "0.1.0"
edition = "2024"

[dependencies]
atrium-api = { version = "0.25.4", default-features = false }
atrium-identity = "0.1.5"
atrium-oauth = "0.1.3"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie-signed", "typed-header"] }
clap = { version = "4.5.40", features = ["derive"] }
hickory-resolver = "0.25.2"
metrics = "0.24.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full", "macros"] }
tokio-util = "0.7.15"
