[package]
name = "who-am-i"
version = "0.1.0"
edition = "2024"

[dependencies]
atrium-api = { version = "0.25.4", default-features = false }
atrium-common = "0.1.2"
atrium-identity = "0.1.5"
atrium-oauth = "0.1.3"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie-signed", "typed-header"] }
axum-template = { version = "3.0.0", features = ["handlebars"] }
clap = { version = "4.5.40", features = ["derive", "env"] }
ctrlc = "3.4.7"
dashmap = "6.1.0"
handlebars = { version = "6.3.2", features = ["dir_source"] }
hickory-resolver = "0.25.2"
metrics = "0.24.2"
metrics-exporter-prometheus = { version = "0.17.2", features = ["http-listener"] }
rand = "0.9.1"
reqwest = { version = "0.12.22", features = ["native-tls-vendored"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full", "macros"] }
tokio-util = "0.7.15"
url = "2.5.4"
